# DistanceMetric

./: README.md  pyproject.toml
src/distance_metric/: README.md  __init__.py  calculator.py  metric.py  result.py
src/distance_metric/calculators/: README.md  __init__.py  cross_elementwise.py
src/distance_metric/calculators/binary/: README.md  __init__.py  metric.py
src/distance_metric/calculators/binary/calculators/: README.md  __init__.py  hamming.py  jaccard.py
src/distance_metric/calculators/covariance_normalized/: README.md  __init__.py  metric.py
src/distance_metric/calculators/covariance_normalized/calculators/: README.md  __init__.py  mahalanobis.py  seuclidean.py
src/distance_metric/calculators/geodesic_sequence/: README.md  __init__.py  metric.py
src/distance_metric/calculators/geodesic_sequence/calculators/: README.md  __init__.py  dynamic_time_warping.py  haversine.py
src/distance_metric/calculators/information_theoretic/: README.md  __init__.py  metric.py
src/distance_metric/calculators/minkowski/: README.md  __init__.py  base.py  metric.py
src/distance_metric/calculators/minkowski/calculators/: README.md  (+6 more)
src/distance_metric/calculators/ratio_based/: README.md  __init__.py  metric.py
src/distance_metric/calculators/robust_transport/: __init__.py  metric.py
src/distance_metric/calculators/set_mismatch/: __init__.py  metric.py
src/distance_metric/calculators/similarity_correlation/: README.md  __init__.py  bases.py  metric.py
src/distance_metric/calculators/transport/: README.md  __init__.py  metric.py
typings/numba/: __init__.pyi
(+29 files in other folders)
