[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "distance-metric"
version = "0.0.1"
authors = [
  { name = "Ryuto Yoshida" },
]
description = "Pairwise and cross distance metrics implemented on NumPy arrays."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "numba>=0.59.0",
]

[project.urls]
Homepage = "https://github.com/ry-yoshida-private/DistanceMetric"
"Bug Tracker" = "https://github.com/ry-yoshida-private/DistanceMetric/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
distance_metric = ["py.typed"]

[tool.pyright]
stubPath = "typings"
